@@ -1,3 +1,11 @@
+2015-09-23  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+
+	Backport from mainline
+	2015-09-10  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+
+	PR target/67439
+	* gcc.target/arm/pr67439_1.c: New test.
+
 2015-09-23  Matthew Wahab  <matthew.wahab@arm.com>
 
 	Backport from mainline
